syntax ="proto3";

service ShopService {
    rpc GetAllProduct (Owner) returns (ProductList) {}
    rpc Get (ProductId) returns (ProductItem){}
    rpc Insert (ProductItem) returns (ProductItem) {}
    rpc Update (ProductItem) returns (ProductItem) {}
    rpc Remove (ProductId) returns (Empty) {}
}

message Empty{}

message ProductItem {
    string _id=1;
    string name=2;
    string category=3;
    int32 price=4;
    string image=5;
    string owner=6;
}

message Owner{
    string owner=1;
}

message ProductList{
    repeated ProductItem product=1;
}

message ProductId{
    string _id=1;
}